--- a/dadi/index.html
+++ b/dadi/index.html
@@ -7,7 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <main></main>
-    <script src="main.js"></script>
+    <main>
+        <button class="btn">Giocare!</button>
+    </main>
+    <script src="main.js">
+    </script>
 </body>
 </html>
